--- a/README
+++ b/README
@@ -5,5 +5,5 @@ For more information on shen see
 
 To use put something like the following in your .emacs
   (require 'shen-mode)
-  (add-hook 'shen-mode-hook paredit-mode)
+  (add-hook 'shen-mode-hook 'paredit-mode) ; <- entirely optional
   (add-to-list 'auto-mode-alist '("\\.shen\\'" . shen-mode))
