--- a/README
+++ b/README
@@ -1,9 +1,16 @@
-The beginnings of an Emacs major mode for shen.
+An Emacs major mode for shen.
 
 For more information on shen see
   http://www.lambdassociates.org/specification/shen_1.8.htm
 
 To use put something like the following in your .emacs
-  (require 'shen-mode)
-  (require 'inf-shen) ; <- for interaction with an external shen process
-  (add-hook 'shen-mode-hook 'paredit-mode) ; <- entirely optional
+    (require 'shen-mode)
+    (require 'inf-shen) ; <- for interaction with an external shen process
+    (add-hook 'shen-mode-hook 'paredit-mode) ; <- entirely optional
+
+Shen-mode.el is now included in the GNU ELPA http://elpa.gnu.org/ and
+may be installed in new versions of Emacs using M-x list-packages.
+
+Inf-shen.el is not yet in the GNU ELPA (pending FSF copyright
+paperwork), until such time as it is incorporated into ELPA
+inf-shen.el may be obtained from this git repository.
